RESOLVED FIXED82077
RexExp constructor last match properties should not rely on previous ovector
https://bugs.webkit.org/show_bug.cgi?id=82077
Summary RexExp constructor last match properties should not rely on previous ovector
Gavin Barraclough
Reported 2012-03-23 12:22:36 PDT
This change simplifies matching, and will enable subpattern results to be fully lazily generated in the future.
Attachments
Fix (40.96 KB, patch)
2012-03-23 12:28 PDT, Gavin Barraclough
oliver: review+
Fix (44.21 KB, patch)
2012-03-23 12:44 PDT, Gavin Barraclough
no flags
Gavin Barraclough
Comment 1 2012-03-23 12:28:57 PDT
Created attachment 133534 [details] Fix No overall performance impact (maybe 1% progression on v8-regexp, nothing significant overall).
Oliver Hunt
Comment 2 2012-03-23 12:37:51 PDT
Comment on attachment 133534 [details] Fix r=me, but you need to add the files to all the other project files.
Gavin Barraclough
Comment 3 2012-03-23 12:44:41 PDT
Gavin Barraclough
Comment 4 2012-03-23 12:57:50 PDT
Fixed in r111889
Note You need to log in before you can comment on or make changes to this bug.